/**
* @version $Id$
* @package FrontAccounting
* @copyright (C) 2005 - 2011 FrontAccounting, LLC
* @license http://www.gnu.org/copyleft/gpl-3.0.html GNU/GPL
* FrontAccounting is Free Software
*/

1. Changelog
------------
This is a changelog for FrontAccounting All releases.

2014-06-14 Janusz Dobrowolski Added short name, name and tax id as search options in customer and supplier lists
2014-06-08 Janusz Dobrowolski Language template update
2014-05-28 Janusz Dobrowolski Customer Credit Note: fixed payments allocation after crediting sales invoice.
2014-05-28 Janusz Dobrowolski Payment/Deposit: new exchange rate was not used for GL postings, now ex_rate is stored before adding transaction.

2014-03-14 Ap.Muthu           Forum Fixes INNER JOINs ** Not in Official Repo As yet ** - sales/includes/db/cust_trans_db.inc, gl/includes/db/gl_db_bank_trans.inc
2013-12-30 Ap.Muthu           query_size to unsigned in users table ** Not in Official Repo As yet ** - sql/alter2.3.sql, en_US-demo.sql, en_US-new.sql
2013-11-23 Ap.Muthu           Slow Query Fix ** Not fully in Official Repo As yet ** (2014-04-05 Update) - sql/alter2.3.sql, en_US-demo.sql, en_US-new.sql

2014-05-21 08:59 +0200 Janusz Dobrowolski
(3386) Fixed unexpected additional GL postings when tax was used in Supplier Invoice additional GL lines.
 purchasing/includes/supp_trans_class.inc
 purchasing/supplier_credit.php

2014-05-21 08:58 +0200 Janusz Dobrowolski
(3385) Small code cleanups.
 includes/current_user.inc
 purchasing/supplier_invoice.php

2014-04-26 09:14 +0200 Janusz Dobrowolski
(3384) Added option to allow password reset (by Mithy).
 access/login.php
 access/password_reset.php
 admin/db/users_db.inc
 config.default.php
 includes/current_user.inc
 includes/session.inc

2014-04-26 00:57 +0200 Janusz Dobrowolski
(3383) Fixed directory traversal issues.
 admin/inst_module.php
 includes/hooks.inc

2014-04-26 00:12 +0200 Janusz Dobrowolski