@@ -10,7 +10,8 @@
 ------------
 This is a changelog for FrontAccounting All releases.
 
-2014-06-14 Janusz Dobrowolski Added short name, name and tax id as search options in customer and supplier lists
+2014-06-17 Joe                User account should not be deleted if there are any entries on his/her name.
+2014-06-14 Joe                Added short name, name and tax id as search options in customer and supplier lists
 2014-06-08 Janusz Dobrowolski Language template update
 2014-05-28 Janusz Dobrowolski Customer Credit Note: fixed payments allocation after crediting sales invoice.
 2014-05-28 Janusz Dobrowolski Payment/Deposit: new exchange rate was not used for GL postings, now ex_rate is stored before adding transaction.
